Step 2: Creating a Model

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="utf-8">
+    <link href="./open-ui5-logo.svg" rel="shortcut icon" type="image/x-icon"/>
+
     <title>Data Binding Tutorial</title>
     <script
         id="sap-ui-bootstrap"
